docs(material/button): avoid clipping icon (#30095)
Fixes that the container in the button example was too narrow and was clipping the button.

Fixes #30091.

(cherry picked from commit ee40cddc3689998f9efd33c84830a82a9827a1f7)

--- a/src/components-examples/material/button/button-overview/button-overview-example.css
+++ b/src/components-examples/material/button/button-overview/button-overview-example.css
@@ -27,5 +27,5 @@ section {
 .example-button-container {
   display: flex;
   justify-content: center;
-  width: 120px;
+  width: 140px;
 }
